# FoxFlow

./: README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-notice.yaml  feature-request.yaml
src/fennflow/files/protocols/: has_ext.py
src/foxflow/files/: registry.py
src/foxflow/files/media/: base.py  binary_content.py  text_content.py
src/foxflow/files/protocols/: has_data_and_ext_obj.py
src/foxflow/files/responses/: base.py
src/foxflow/files/utils/: determine_filename.py
